# impx

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.ps1  main.cpp
.cache/clangd/index/: main.cpp.AD9E9600D4C25797.idx  wereType.hpp.1BAFE4F054C95D74.idx
docs/: build.md  install.ps1
src/: main.cpp
src/core/: calc.cppm  lexer.cpp  lexer.cppm  lexer.hpp  parser.cppm
